--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -4,7 +4,7 @@
     "semi": true,
     "useTabs": false,
     "trailingComma": "none",
-    "singleQuote": true,
+    "singleQuote": false,
     "tabWidth": 4,
     "printWidth": 100,
     "endOfLine": "lf",
