--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev -p 3001",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -40,19 +40,21 @@
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.1.5",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@supabase/ssr": "^0.4.0",
+        "@supabase/supabase-js": "^2.44.4",
         "@tanstack/react-table": "^8.10.7",
         "@types/node": "20.5.7",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "@uploadthing/react": "^5.7.0",
         "autoprefixer": "10.4.15",
+        "axios": "^1.7.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "date-fns": "^2.30.0",
         "eslint": "8.48.0",
         "eslint-config-next": "^14.0.1",
         "lucide-react": "^0.291.0",
-        "mongodb": "^6.8.0",
         "mongoose": "^8.5.1",
         "next": "^14.2.3",
         "next-auth": "^5.0.0-beta.18",
