--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
         "@radix-ui/react-tooltip": "^1.0.7",
         "@supabase/ssr": "^0.4.0",
         "@supabase/supabase-js": "^2.44.4",
+        "@tanstack/react-query": "^5.51.15",
         "@tanstack/react-table": "^8.10.7",
         "@types/node": "20.5.7",
         "@types/react": "18.2.21",
@@ -77,6 +78,7 @@
         "zustand": "^4.4.6"
     },
     "devDependencies": {
+        "@tanstack/react-query-devtools": "^5.51.15",
         "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "husky": "^9.0.11",
